Revert "FDN-4939: Add OpenAPI 3.x import support (#970)"
This reverts commit bf37332889e35f7de539ed61a95a06dc05fdcf3f.